favicon and index page

--- a/index.html
+++ b/index.html
@@ -1,21 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>law site demo</title>
-    <meta name="description" content="Leading law firm in Saudi Arabia specializing in corporate law, intellectual property, business formation, and legal compliance. Expert legal services with 15+ years of experience.">
-    <meta name="author" content="Ali Bin Fahad Law Firm & Intellectual Property LLC" />
-    <meta name="keywords" content="law firm Saudi Arabia, corporate law, intellectual property, business formation, legal services, litigation, trademark services, Riyadh lawyers">
+    <title>
+      Ali Bin Fahad Law Firm & Intellectual Property LLC - Premier Legal
+      Services in Saudi Arabia
+    </title>
+    <meta
+      name="description"
+      content="Leading law firm in Saudi Arabia specializing in corporate law, intellectual property, business formation, and legal compliance. Expert legal services with 15+ years of experience."
+    />
+    <meta
+      name="author"
+      content="Ali Bin Fahad Law Firm & Intellectual Property LLC"
+    />
+    <meta
+      name="keywords"
+      content="law firm Saudi Arabia, corporate law, intellectual property, business formation, legal services, litigation, trademark services, Riyadh lawyers, legal consultation, contract drafting, debt collection"
+    />
 
-    <meta property="og:title" content="Ali Bin Fahad Law Firm & Intellectual Property LLC - Premier Legal Excellence" />
-    <meta property="og:description" content="Leading law firm in Saudi Arabia providing comprehensive legal solutions with expertise in corporate law, IP protection, and business compliance." />
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Ali Bin Fahad Law Firm & Intellectual Property LLC - Premier Legal Excellence"
+    />
+    <meta
+      property="og:description"
+      content="Leading law firm in Saudi Arabia providing comprehensive legal solutions with expertise in corporate law, IP protection, and business compliance."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://alibinfahadlaw.com" />
+    <meta property="og:site_name" content="Ali Bin Fahad Law Firm" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:title"
+      content="Ali Bin Fahad Law Firm - Expert Legal Services"
+    />
+    <meta
+      name="twitter:description"
+      content="Premier law firm in Saudi Arabia with 15+ years of experience in corporate law, intellectual property, and business formation."
+    />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="distribution" content="web" />
+    <meta name="rating" content="general" />
   </head>
 
   <body>
